# multiclase-classifier_e2

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt
BBDD/: database.py  models.py
app/: api.py  front.py
app/assets/: custom.css
backend/: main.py
backend/core/: logging_config.py  terminal_interface.py
backend/db/: configuration.py  database.py  models.py
backend/models/: schemas.py
backend/services/: bmi_service.py  database_service.py  prediction_service.py
data/processed_data/: X_test_scaled.parquet  X_train_rus.parquet  X_train_scaled.parquet  df_unique.parquet  y_test.parquet  y_train.parquet  y_train_rus.parquet  y_train_smote.parquet  y_train_smoteenn.parquet  y_train_smotetomek.parquet
docs/: EDA.ipynb  Modelos_completos_diabetes.ipynb  eda.ipynb  preprocessing.ipynb
docs/model/: model_lgbm.pkl
docs/model_performance_reports/: Gradient_Boosting_Original_tuned_report.md  Gradient_Boosting_RUS_tuned_report.md  Gradient_Boosting_SMOTE-ENN_tuned_report.md  Gradient_Boosting_SMOTE-Tomek_tuned_report.md  Gradient_Boosting_SMOTE_tuned_report.md  Logistic_Regression_Original_tuned_report.md  Logistic_Regression_RUS_tuned_report.md  Logistic_Regression_SMOTE-ENN_tuned_report.md  Random_Forest_RUS_tuned_report.md  (+11 more)
notebook/: diabetes.ipynb  diabetes_v1.ipynb  diabetes_v1.py  diabetes_v2.ipynb  diabetes_v3.ipynb
src/: data_loader.py  data_preprocessor.py  model_evaluator.py  resamplers.py
tests/: test_api.py  test_db_connection.py  test_front.py  test_model.py
(+8 files in other folders)
